--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Platno na kojem možete nacrtati različite boje.</string>
+    <string name="app_short_description">Pen and paper for your quick sketches.</string>
     <string name="app_long_description">
         Želite li nacrtati nešto, ali bez papira? Ova aplikacija je stvorena za Vas. Samo odaberite boju i nacrtajte. Možete spremiti crtež ili ga podijeliti putem e-pošte ili društvenih mreža.
 
