--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Aplikasi menggambar sederhana dengan pilihan warna yang tidak terbatas.</string>
+    <string name="app_short_description">Pen and paper for your quick sketches.</string>
     <string name="app_long_description">
         Ingin menggambar sesuatu tetapi tidak ada kertas? Aplikasi ini sangat cocok untuk anda. Cukup pilih warna dan mulai menggambar. Anda bisa menyimpan gambar anda atau bagikan langsung melalui email atau jejaring sosial.
 
