--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Una tela su cui si può disegnare con diversi colori.</string>
+    <string name="app_short_description">Pen and paper for your quick sketches.</string>
     <string name="app_long_description">
         Si vuole disegnare qualcosa ma non non c\'è carta? Allora quest\'app è perfetta; si deve solamente selezionare un colore e disegnare. Si possono salvare i disegni o condividerli direttamente via email o sui social network.
         
