--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Drobė ant kurios, galima piešti skirtingomis spalvomis.</string>
+    <string name="app_short_description">Pen and paper for your quick sketches.</string>
     <string name="app_long_description">
         Norite ką nors nupiešti bet neturite popieriaus? Ši programėlė tiks puikiausiai. Tiesiog pasirinkite spalvą ir pieškite. Jūs taip pat galite išsaugoti piešinį arba pasidalinti juo per elektroninį paštą arba socialinius tinklus.
 
