--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Pen and paper for your quick sketches.</string>
+    <string name="app_short_description">讓你能快速塗鴉的紙筆。</string>
     <string name="app_long_description">
         想要畫些什麼卻沒有紙?這程式絕對適合你。只要挑一個顏色，就開始畫了。你能將繪圖存檔起來，或是透過信箱或社群網站直接分享出去。
 
