--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple Draw Pro - The app for your quick sketches</string>
+    <string name="app_title">Απλή Ζωγραφική Pro - Εφαρμογή για γρήγορα σκίτσα</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Στυλό και Χαρτί για γρήγορα σχέδια σας.</string>
     <string name="app_long_description">
