Allow quick save with Clear and add Reset button
ref https://github.com/SimpleMobileTools/Simple-Draw/issues/116

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">إظهار أداة حجم الفرشاة</string>
     <string name="allow_zooming_canvas">السماح بتكبير لوحة الرسم باستخدام الإيماءات</string>
     <string name="clear">مسح</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">تغيير لون الخلفية</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
