--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Dimensione della gomma</string>
     <string name="allow_zooming_canvas">Permetti l\'ingrandimento con i gesti</string>
     <string name="clear">Pulisci</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Cambia colore di sfondo</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
