--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Zobraziť menič veľkosti štetca</string>
     <string name="allow_zooming_canvas">Povoliť približovanie plátna gestami</string>
     <string name="clear">Vymazať</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Zmeniť farbu pozadia</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
