--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Dangos teclyn maint brws</string>
     <string name="allow_zooming_canvas">Caniatáu chwyddo\'r cynfas gydag ystumiau</string>
     <string name="clear">Clirio</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Newid lliw cefndir</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
