--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Vis regulering af stregtykkelse</string>
     <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
     <string name="clear">Ryd</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Skift baggrundsfarve</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
