--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Εμφάνιση εργαλείου για διαστάσεις του πινέλου</string>
     <string name="allow_zooming_canvas">Αποδοχή μεγέθυνσης καμβά με χειρονομίες</string>
     <string name="clear">Καθαρισμός</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Αλλαγή χρώματος παρασκηνίου</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
