--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Tampilkan tombol ukuran kuas</string>
     <string name="allow_zooming_canvas">Izinkan zum kanvas dengan gestur</string>
     <string name="clear">Hapus</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Ubah warna latar</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
