--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">브러쉬 크기조절 도구 활성화</string>
     <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
     <string name="clear">지우기</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">배경색 변경</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
