--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Rodyti teptuko dydžio įrankį</string>
     <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
     <string name="clear">Išvalyti</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Pakeisti fono spalvą</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
