--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Knop penceelgrootte tonen</string>
     <string name="allow_zooming_canvas">Met gebaren inzoomen/uitzoomen</string>
     <string name="clear">Wissen</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Achtergrondkleur</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
