--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Omogoči spreminjanje velikosti čopiča</string>
     <string name="allow_zooming_canvas">Omogoči povečevanje</string>
     <string name="clear">Počisti</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Spremeni barvo ozadja</string>
     
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
