--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">Fırça boyutu aracını göster</string>
     <string name="allow_zooming_canvas">Tuvali hareketlerle yakınlaştırmaya izin ver</string>
     <string name="clear">Temizle</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">Arka plan rengini değiştir</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
