--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -9,6 +9,7 @@
     <string name="show_brush_size">顯示畫筆尺寸工具</string>
     <string name="allow_zooming_canvas">允許使用手勢縮放畫布</string>
     <string name="clear">清除</string>
+    <string name="reset">Reset</string>
     <string name="change_background_color">改變背景顏色</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
