--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Jednoduché kreslení Pro - Aplikace pro rychlé náčrty</string>
+    <string name="app_title">Jednoduché kreslení Pro - Aplikace pro vaše náčrty</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Pero a papír pro vaše rychlé nákresy.</string>
     <string name="app_long_description">
