--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -21,7 +21,14 @@
 
         Δεν περιέχει διαφημίσεις ούτε απαιτούνται περιττά δικαιώματα. Είναι εντελώς ανοιχτού κώδικα. Επιτρέπει προσαρμοσμένα χρώματα.
 
-        Αυτή η εφαρμογή είναι ένα μέρος από μία μεγαλύτερη σειρά εφαρμογών. Μπορείτε να βρείτε τις υπόλοιπες στο  https://www.simplemobiletools.com
+        <b>Check out the full suite of Simple Tools here:</b>
+        https://www.simplemobiletools.com
+
+        <b>Facebook:</b>
+        https://www.facebook.com/simplemobiletools
+
+        <b>Reddit:</b>
+        https://www.reddit.com/r/SimpleMobileTools
     </string>
 
     <!--
