--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -21,7 +21,14 @@
 
         Aplikacija ne vsebuje oglasov in ne zahteva nepotrebnih dovoljenj. Je popolnoma odprtokodna in zelo prilagodljiva.
 
-        Aplikacija je le ena v večji seriji aplikacij. Ostale lahko najdete na spletni strani https://www.simplemobiletools.com
+        <b>Check out the full suite of Simple Tools here:</b>
+        https://www.simplemobiletools.com
+
+        <b>Facebook:</b>
+        https://www.facebook.com/simplemobiletools
+
+        <b>Reddit:</b>
+        https://www.reddit.com/r/SimpleMobileTools
     </string>
     
     <!--
