--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,7 +21,14 @@
 
         Без рекламы и излишних прав доступа. Полностью открытое ПО, а также есть тёмная тема интерфейса.
 
-        Это только одно приложение из множества других в серии. Вы можете найти остальные на https://www.simplemobiletools.com
+        <b>Check out the full suite of Simple Tools here:</b>
+        https://www.simplemobiletools.com
+
+        <b>Facebook:</b>
+        https://www.facebook.com/simplemobiletools
+
+        <b>Reddit:</b>
+        https://www.reddit.com/r/SimpleMobileTools
     </string>
 
     <!--
