--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -15,9 +15,19 @@
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Jednoduché kreslenie Pro - Apka pre rýchle náčrty</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Pero a papier pre vaše jednoduché nákresy.</string>
+    <string name="app_short_description">Pero a papier pre vaše jednoduché nákresy bez reklám a prístupu na internet.</string>
     <string name="app_long_description">
-        Chcete nakresliť niečo jednoduché, ale nemáte papier? Táto apka vám príde vhod. Zvoľte si farbu a kreslite. Kresby viete buď uložiť, alebo priamo zdieľať cez email, resp. sociálne siete.
+        Want to draw something creative but you have no paper? This app will suit you perfectly. Just pick a color and draw, it is as easy as that. You can either save the drawing in a file, print it or share it directly through email or social networks so that your friends can have some fun with it too.
+
+        This hugely popular app for quick sketches provides many useful functions like Undo/Redo, changing the background color, or using an image as the background. You can optionally make the app prevent the device from falling asleep too. You can also change the brush size, or use an eraser, if you messed something up. It supports inserting colors either by selecting it on a huge palette, or by entering the colors hex code.
+
+        The app supports many different formats like PNG, JPG or SVG vectors.
+
+        You can either draw something new from scratch, or open some file and just play around with it. It is perfectly usable either by you, or by a family with children to play some games. Afterall, everyone has a piece of artist in himself.
+
+        You will not find any fancy or advanced tools, brushes, fonts, filters here, it is supposed to be used to have some fun with.
+
+        Táto apka je založená na Material dizajne a má prednastavenú tmavú tému, poskytuje výbornú používateľskú skúsenosť pre ľahké používanie. Chýbajúci prístup k internetu garantuje lepšie súkromie, bezpečnosť a stabilitu ako ostatné apky.
 
         Neobsahuje žiadne reklamy a nepotrebné oprávnenia. Je opensource, poskytuje možnosť zmeny farieb.
 
